# DetectionEngine

./: .gitignore  CMakeLists.txt  README.md  compile_cobjectflow_alone.sh  compile_cobjectflow_alone_qtcreator.sh  compile_with_external.sh  my_compile.sh
examples/: faster_rcnn_r50_fpn_1xsoftmax.py  inference_time.txt
examples/fasterrcnn_fclayer_cobjectflow/roialign/: converted_model_stage2.caffemodel  eval_result  faster_rcnn_r50_c4_1x.py  fasterrcnn_fclayer_cobjectflow.txt  fasterrcnn_fclayer_cobjectflow_cfg.txt
examples/fasterrcnn_fclayer_cobjectflow/roialign/first/: rel.prototxt
examples/fasterrcnn_fclayer_cobjectflow/roialign/second/: rel.prototxt
examples/maskrcnn_cobjectflow/: converted_model_stage2-convert.prototxt  eval_result  faster_rcnn_r50_fpn_1xsoftmax.py  maskrcnn_cobjectflow.txt  maskrcnn_cobjectflow_cfg.txt
examples/maskrcnn_cobjectflow/first/: rel.prototxt
examples/mobilenetFPN_v2_softmax/: converted_model_stage1-convert.prototxt  converted_model_stage2.caffemodel  converted_model_stage2.prototxt  mobilenetFPN_v2_softmax_cfg.txt
examples/mobilenet_cudatest/: MobileNetV2_cuda2.py  converted_model_stage1.prototxt  eval_result  mobilenet_cudatest.txt  mobilenet_cudatest_cfg.txt
examples/mobilenet_cudatest/first/: rel.prototxt
examples/mobilenet_cudatest/second/: rel.prototxt
examples/retinanet_cobjectflow/: converted_model_stage1-convert.prototxt  ratio4version32.py  retinanet_cobjectflow_cfg.txt
examples/retinate_32_bilinear_cfg/: rel.prototxt  retinate_32_bilinear_cfg.txt
include/anchor_heads/: anchor_head.h  rpn_head.h
include/bbox_heads/: bbox_head.h
include/core/anchor/: anchor_generator.h
include/detectors/: detector.h  single_stage.h  two_stage.h
include/inference/: inference.h
include/roi_extractors/: single_level.h
include/test/: test.h
include/utils/: anchor_heads_function.h  basic_type_def.h  bbox.h  image_preprocess.h  json_parser.h  math_functions.h  nms.h  roi_align.h  transpose_index.h
src/anchor_heads/: CMakeLists.txt  anchor_head.cc  rpn_head.cc
src/bbox_heads/: CMakeLists.txt  bbox_head.cc
src/core/: CMakeLists.txt
src/core/anchor/: anchor_generator.cc
src/detectors/: CMakeLists.txt  detector.cc  single_stage.cc  two_stage.cc
src/inference/: CMakeLists.txt  inference.cc
src/roi_extractors/: CMakeLists.txt  single_level.cc
src/utils/: CMakeLists.txt  anchor_heads_function.cc  bbox.cc  image_preprocess.cc  json_parser.cc  math_functions.cc  nms.cc  roi_align.cc  transpose_index.cc
test/: CMakeLists.txt  classification.cc  eval_1stage_detector.cc  eval_1stage_detector_multi_thread.cc  eval_2stage_detector.cc  eval_2stage_detector_multi_thread.cc  eval_with_txt.cc  test_1stage_detector.cc  test_2stage_detector.cc  test_anchor_generator.cc  test_fstream.cc  test_json.cc  test_shared_ptr.cc  test_stl_sort.cc  test_vector.cc
